packages/daisyui/src/components/collapse.css
.collapse:not(td, tr, colgroup) {
  visibility: revert-layer;
}

.collapse {
  @layer daisyui.l1.l2.l3 {
    display: grid;
    position: relative;
    border-radius: var(--radius-box, 1rem);
    width: 100%;
    grid-template-rows: max-content 0fr;
    grid-template-columns: minmax(0, 1fr);
    isolation: isolate;
    @media (prefers-reduced-motion: no-preference) {
      transition: grid-template-rows 0.2s;
    }

    > input:is([type="checkbox"], [type="radio"]) {
      grid-column-start: 1;
      grid-row-start: 1;
      appearance: none;
      opacity: 0;
    }

    &:is(
      [open],
      [tabindex]:focus:not(.collapse-close),
      [tabindex]:focus-within:not(.collapse-close)
    ),
    &:not(.collapse-close):has(> input:is([type="checkbox"], [type="radio"]):checked) {
      grid-template-rows: max-content 1fr;
    }

    &:is(
        [open],
        [tabindex]:focus:not(.collapse-close),
        [tabindex]:focus-within:not(.collapse-close)
      )
      > .collapse-content,
    &:not(.collapse-close)
      > :where(input:is([type="checkbox"], [type="radio"]):checked ~ .collapse-content) {
      --overflow-delay: 0.2s;
      overflow: revert-layer;
      content-visibility: visible;
      min-height: fit-content;
      @supports not (content-visibility: visible) {
        visibility: visible;
      }
    }
    &:focus-visible,
    &:has(> input:is([type="checkbox"], [type="radio"]):focus-visible),
    &:has(summary:focus-visible) {
      outline-color: var(--color-base-content);
      outline-style: solid;
      outline-width: 2px;
      outline-offset: 2px;
    }

    &:not(.collapse-close) {
      > input[type="checkbox"],
      > input[type="radio"]:not(:checked),
      > .collapse-title {
        cursor: pointer;
      }
    }

    &[tabindex]:focus:not(.collapse-close, .collapse[open]),
    &[tabindex]:focus-within:not(.collapse-close, .collapse[open]) {
      > .collapse-title {
        cursor: unset;
      }
    }

    &:is(
        [open],
        [tabindex]:focus:not(.collapse-close),
        [tabindex]:focus-within:not(.collapse-close)
      )
      > :where(.collapse-content),
    &:not(.collapse-close)
      > :where(input:is([type="checkbox"], [type="radio"]):checked ~ .collapse-content) {
      padding-bottom: 1rem;
    }

    > input:is([type="checkbox"], [type="radio"]) {
      z-index: 1;
      width: 100%;
      padding: 1rem;
      padding-inline-end: 3rem;
      min-height: 1lh;
      transition: background-color 0.2s ease-out;

      &:has(~ label) {
        z-index: revert-layer;
      }
    }

    &:is(details) {
      width: 100%;

      &::details-content {
        --overflow-delay: 0s;
        overflow: clip;
        height: 0;
      }

      @media (prefers-reduced-motion: no-preference) {
        &::details-content {
          transition:
            overflow 0.2s allow-discrete var(--overflow-delay),
            content-visibility 0.2s allow-discrete,
            visibility 0.2s allow-discrete,
            min-height 0.2s ease-out allow-discrete,
            padding 0.1s ease-out 20ms,
            background-color 0.2s ease-out,
            height 0.2s;
          interpolate-size: allow-keywords;
        }

        &:where([open])::details-content {
          --overflow-delay: 0.2s;
          height: auto;
          overflow: revert-layer;
        }
      }

      > summary {
        position: relative;
        display: block;
        outline: none;

        &::-webkit-details-marker {
          display: none;
        }
      }
    }
  }

  @layer daisyui.l1.l2 {
    &:is([open]) {
      &.collapse-arrow {
        > .collapse-title:after {
          @media (prefers-reduced-motion: no-preference) {
            transform: translateY(-50%) rotate(225deg);
          }
        }
      }
    }

    &.collapse-open {
      &.collapse-arrow {
        > .collapse-title:after {
          @media (prefers-reduced-motion: no-preference) {
            transform: translateY(-50%) rotate(225deg);
          }
        }
      }
    }

    &[tabindex].collapse-arrow:focus:not(.collapse-close),
    &.collapse-arrow[tabindex]:focus-within:not(.collapse-close) {
      > .collapse-title:after {
        transform: translateY(-50%) rotate(225deg);
      }
    }

    &.collapse-arrow:not(.collapse-close) {
      > input:is([type="checkbox"], [type="radio"]):checked ~ .collapse-title:after {
        transform: translateY(-50%) rotate(225deg);
      }
    }

    &[open] {
      &.collapse-plus {
        > .collapse-title:after {
          --tw-content: "−";
          content: var(--tw-content);
        }
      }
    }

    &.collapse-open {
      &.collapse-plus {
        > .collapse-title:after {
          --tw-content: "−";
          content: var(--tw-content);
        }
      }
    }

    &[tabindex].collapse-plus:focus:not(.collapse-close) {
      > .collapse-title:after {
        --tw-content: "−";
        content: var(--tw-content);
      }
    }

    &.collapse-plus:not(.collapse-close) {
      > input:is([type="checkbox"], [type="radio"]):checked ~ .collapse-title:after {
        --tw-content: "−";
        content: var(--tw-content);
      }
    }
  }
}

.collapse-title {
  @layer daisyui.l1.l2.l3 {
    grid-column-start: 1;
    grid-row-start: 1;
  }
}

.collapse-content {
  @layer daisyui.l1.l2.l3 {
    --overflow-delay: 0s;
    content-visibility: hidden;
    overflow: clip;
    grid-column-start: 1;
    grid-row-start: 2;
    min-height: 0;
    padding-left: 1rem;
    padding-right: 1rem;
    cursor: unset;
    @supports not (content-visibility: hidden) {
      visibility: hidden;
    }
    @media (prefers-reduced-motion: no-preference) {
      transition:
        overflow 0.2s allow-discrete var(--overflow-delay),
        content-visibility 0.2s allow-discrete,
        visibility 0.2s allow-discrete,
        min-height 0.2s ease-out allow-discrete,
        padding 0.1s ease-out 20ms,
        background-color 0.2s ease-out;
    }

    details > & {
      content-visibility: visible;
    }
  }
}

.collapse-arrow {
  @layer daisyui.l1.l2 {
    > .collapse-title:after {
      position: absolute;
      display: block;
      height: 0.5rem;
      width: 0.5rem;
      transform: translateY(-100%) rotate(45deg);
      @media (prefers-reduced-motion: no-preference) {
        transition-property: all;
        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
        transition-duration: 0.2s;
      }
      top: 50%;
      inset-inline-end: 1.4rem;
      content: "";
      transform-origin: 75% 75%;
      box-shadow: 2px 2px;
      pointer-events: none;
    }
  }
}

.collapse-plus {
  @layer daisyui.l1.l2 {
    > .collapse-title:after {
      position: absolute;
      display: block;
      height: 0.5rem;
      width: 0.5rem;
      @media (prefers-reduced-motion: no-preference) {
        transition-property: all;
        transition-duration: 300ms;
        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
      }
      top: 0.9rem;
      inset-inline-end: 1.4rem;
      --tw-content: "+";
      content: var(--tw-content);
      pointer-events: none;
    }
  }
}

.collapse-title {
  @layer daisyui.l1.l2.l3 {
    position: relative;

    width: 100%;
    padding: 1rem;
    padding-inline-end: 3rem;
    min-height: 1lh;
    transition: background-color 0.2s ease-out;
  }
}

.collapse-open {
  @layer daisyui.l1.l2 {
    grid-template-rows: max-content 1fr;
    > .collapse-content {
      --overflow-delay: 0.2s;
      overflow: revert-layer;
      content-visibility: visible;
      min-height: fit-content;
      padding-bottom: 1rem;
      @supports not (content-visibility: visible) {
        visibility: visible;
      }
    }
  }
}

